[metadata]
name = pangeo-forge-earthdatalogin
description = Beam Transforms for doing EarthData Login, for use with pangeo-forge-recipes
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Yuvi Panda
maintainer_email = yuvipanda@gmail.com
url = https://github.com/yuvipanda/pangeo-forge-earthdatalogin
license = 3-BSD
keywords = pangeo, data

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    pangeo-forge-recipes
    aiohttp

[isort]
known_first_party=pangeo_forge_recipes
known_third_party=aiohttp,apache_beam,click,dask,fsspec,kerchunk,mypy_extensions,numpy,pandas,pytest,pytest_lazyfixture,setuptools,xarray,yaml,zarr
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=100

